--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 *{
 margin: 0;
 padding: 0;
-
+white-space: pre-line;  
+vertical-align: bottom;
 }
 
 
@@ -211,6 +212,7 @@ footer{
   align-items: center;
   margin: 20px;
   transition: transform 1000ms ease;
+  text-align: center
 }
 
 .shopCart:hover{
@@ -242,15 +244,26 @@ footer{
 }
 
 .shopCart h2{
-  padding: 20px;
+  font-size: 18px;
+  padding: 5px 20px 5px 20px;
+
 }
 
 .shopCart p{
-
+  
+  padding: 0 15px 0 15px;
+  
 }
 
 .shopCart b{
   padding: 10px;
 
 
+}
+.textPosition{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
