--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -31,8 +31,8 @@
   
   .swiper-slide .title {
     font-family: Inter;
-    -webkit-text-stroke-width: 0.7px;
-    -webkit-text-stroke-color: #F36423;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: #000000;
     text-align: center;
     padding: 150px 0 20px 0;
     font-size: 60px;
@@ -42,7 +42,7 @@
   .swiper-slide .subtitle {
     font-family: Inter;
     -webkit-text-stroke-width: 0.5px;
-    -webkit-text-stroke-color: #F36423;
+    -webkit-text-stroke-color: #000000;
     text-align: center;
     font-size: 50px;
     font-weight: 700;
@@ -50,8 +50,8 @@
   
   .swiper-slide .text {
     font-family: Inter;
-    -webkit-text-stroke-width: 0.3px;
-    -webkit-text-stroke-color: #F36423;    
+    -webkit-text-stroke-width: 0.1px;
+    -webkit-text-stroke-color: #000000;    
     text-align: center;
     font-size: 40px;
     padding: 10px 100px;
@@ -62,3 +62,141 @@
     font-size: 40px;
     font-weight: 700;
   }
+
+
+
+
+  @media (max-width: 992px){
+    .swiper-slide{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 5px;
+    }
+    .swiper-slide .text{
+      padding: 5px;
+    }
+    .swiper-slide .title {
+      font-size: 50px;
+
+    }
+    .mtk{
+      font-size: 45px;
+      font-weight: 700;
+    }
+    .swiper-slide .subtitle {
+
+      font-size: 40px;
+
+    }
+    
+    .swiper-slide .text {
+
+      font-size: 35px;
+
+    }
+
+
+
+  }
+
+
+
+
+  @media (max-width: 768px){
+    .swiper-slide{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 5px;
+    }
+    .swiper-slide .title {
+      font-size: 45px;
+      padding: 50px 0 20px 0;
+
+    }
+    .mtk{
+      font-size: 40px;
+      font-weight: 700;
+    }
+    .swiper-slide .subtitle {
+
+      font-size: 35px;
+
+    }
+    
+    .swiper-slide .text {
+
+      font-size: 30px;
+
+    }
+
+
+
+  }
+
+
+  @media(max-width: 565px) {
+    .swiper-slide{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 5px;
+    }
+
+    .swiper-slide .title {
+      font-size: 35px;
+
+    }
+    .mtk{
+      font-size: 32px;
+      font-weight: 700;
+    }
+    .swiper-slide .subtitle {
+
+      font-size: 27px;
+
+    }
+    
+    .swiper-slide .text {
+
+      font-size: 20px;
+
+    }
+
+  }
+
+
+
+  @media (max-width: 320px){
+    .swiper-slide{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 5px;
+    }
+
+    .swiper-slide .title {
+      font-size: 30px;
+
+    }
+    .mtk{
+      font-size: 27px;
+      font-weight: 700;
+    }
+    .swiper-slide .subtitle {
+
+      font-size: 24px;
+
+    }
+    
+    .swiper-slide .text {
+
+      font-size: 12px;
+
+    }
+
+
+
+  }
+
