--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,13 @@
 *{
 margin: 0;
 padding: 0;
-white-space: pre-line;  
-vertical-align: bottom;
+
 }
 
 
 
 header{
+  
   font-family: Inter;
   background-color: #1E2227;
   width: 100%;
@@ -18,6 +18,8 @@ header{
   justify-content: center;
   flex-direction: column;
   border-bottom: 2px solid #F36423 ;
+  align-items: center;
+
   
   
 }
@@ -30,10 +32,12 @@ header{
 }
 
 .header{
+  width: 90%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 30px;
+  
 }
 
 
@@ -41,12 +45,16 @@ header{
 body{
   background-color: #F0F0F0;
   color: #D9D9D9;
+
 }
 
 .navigator{
   font-size: 24px;
   display: flex;
   gap: 60px;
+  justify-content: space-evenly;
+  text-align: center;
+  align-items: center;
   
 }
 
@@ -97,12 +105,13 @@ body{
 
 .delivery{
   width: 100%;
-  min-height: 970px;
+  height: 970px;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #D9D9D9;
   border-bottom: 2px  solid #F36423 ;
+  
 }
 
 .deliveryhead{
@@ -124,17 +133,22 @@ body{
   margin-top: 60px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
+
+
+
 .deliveryinfotext{
-  margin-left: 50px;
+  margin: 50px;
   gap: 20px;
-  font-size: 34px;
+  font-size: 35px;
   color: #3C4451;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
 }
+
 .work{
   font-family: Inter;
   margin: 50px 0;
@@ -144,6 +158,7 @@ body{
   align-items: center;
   color: #3C4451;
   font-size: 34px;
+  text-align: center;
 }
 .textorange{
   font-weight: 600;
@@ -157,7 +172,7 @@ body{
   min-height: 970px;
   display: flex;
   flex-direction: column;
-    
+  background-size: cover;
   align-items: center;
   flex-wrap: nowrap;
   justify-content: center;
@@ -167,6 +182,7 @@ body{
 .cardh2{
   font-size: 36px;
   margin: 50px 0;
+  text-align: center
 
 }
 
@@ -174,6 +190,7 @@ body{
   margin: 20px 0 50px 0;
   width: 50%;
   border-collapse: collapse;
+  
   
 
 }
@@ -184,6 +201,7 @@ body{
   text-align: center;
   padding: 10px;
   border: 2px solid #F36423;
+  text-align: center;
 }
 
 
@@ -202,8 +220,8 @@ footer{
 
 
 .shopCart{
-  width: 250px;
-  height: 330px;
+  width: 350px;
+  height: 450px;
   background-color: #1E2227;
   border-radius: 10px;
   border: 2px solid #F36423;
@@ -216,7 +234,7 @@ footer{
 }
 
 .shopCart:hover{
-  transform: scale(1.3);
+  transform: scale(1.1);
 }
 
 .shop{
@@ -235,6 +253,8 @@ footer{
   justify-content: space-evenly;
   align-content: space-around;
   flex-wrap: wrap;
+  white-space: pre-line;  
+  vertical-align: bottom;
 }
 
 .shopCart img {
@@ -264,6 +284,194 @@ footer{
   height: 100%;
   display: flex;
   flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+  justify-content: space-around;
+  align-items: center;
 }
+
+.open{
+  display: flex !important;
+}
+
+.burger{
+  display: none;
+  position: relative;
+  z-index: 50;
+  align-items: center;
+  justify-content: flex-end;
+  width: 30px;
+  height: 18px;
+}
+
+.burger span{
+  height: 2px;
+  width: 80%;
+  background-color: aqua;
+}
+
+.burger::after, .burger::before {
+  content: '';
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  background-color: aqua;
+  transition: all 0.3s ease 0s;
+}
+
+
+.burger::before {top: 0}
+
+.burger::after{bottom: 0;}
+
+
+.burger.active span {transform: scale(0);}
+
+.burger.active::after{
+  bottom: 50%;
+  transform: rotate(45deg) translate(0, 50%);
+}
+
+.burger.active::before{
+  top: 50%;
+  transform: rotate(-45deg) translate(0, -50%);
+}
+
+
+
+
+
+
+
+@media (max-width: 1576px){
+  .shopCart{
+    width: 250px;
+    height: 350px;
+  }
+  .deliveryinfotext{
+    font-size: 25px;
+  }
+  .navigator{
+    font-size: 22px;
+    gap: 50px;
+  }
+
+}
+
+@media (max-width: 992px){
+  .navigator{
+    font-size: 20px;
+    gap: 50px;
+  }
+  .product{
+    height: auto;
+  }
+  .delivery{
+    height: auto;
+  }
+  .navigator{
+    font-size: 16px;
+  }
+
+}
+
+@media (max-width: 768px){
+  .navigator{
+    font-size: 14px;
+    gap: 30px;
+  }
+  .deliveryinfotext{
+    font-size: 20px;
+  }
+  .deliveryinfo img{
+    width: 350px;
+    height: 100%;
+
+  }
+  .product{
+    height: auto;
+  }
+  .delivery{
+    height: auto;
+  }
+
+  .burger{display: flex;}
+  .navigator{
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0; bottom: 0; left: 0; right: 0;
+    z-index: 50;
+    overflow-y: auto;
+    padding: 50px 40px;
+    background-color: #3C4451;
+    animation: burgerAnimation 0.4s;
+
+  }
+  .navigator ul{
+    flex-direction: column;
+    row-gap: 30px;
+  }
+
+
+}
+
+@media(max-width: 565px) {
+  .deliveryinfotext{
+    font-size: 14px;
+    gap: 20px;
+    
+  }
+  .deliveryinfo img{
+    width: 150px;
+    height: auto;
+  }
+  .table td{
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 320px){
+  .product{
+    height: auto;
+  }
+  .shopCart{
+    width: 200px;
+    height: 300px;
+  }
+  .shopCart img{
+    width: 30%;
+  }
+  .info{
+    height: auto;
+  }
+  .producthead{
+    font-size: 16px;
+  }
+  .deliveryhead{
+    font-size: 16px;
+  }
+  .cardh2{
+    font-size: 16px;
+  }
+  .work{
+    font-size: 16px;
+  }
+  .textorange{
+    font-size: 14px;
+  }
+  .deliveryinfotext{
+    font-size: 14px;
+  }
+  .delivery{
+    height: auto;
+  }
+  .deliveryinfo img{
+    display:none;
+  }
+  .table td{
+    font-size: 12px;
+  }
+}
+
+
