--- a/src/index.css
+++ b/src/index.css
@@ -393,7 +393,8 @@ footer{
     height: auto;
   }
 
-  .burger{display: flex;}
+  .burger {display: flex;}
+
   .navigator{
     display: none;
     flex-direction: column;
@@ -428,6 +429,9 @@ footer{
   }
   .table td{
     font-size: 12px;
+  }
+  .deliveryinfo img{
+    display:none;
   }
 }
 
@@ -475,3 +479,7 @@ footer{
 }
 
 
+@keyframes burgerAnimation {
+  from{opacity: 0;}
+  to{opacity: 1;}
+}
