--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -95,7 +95,13 @@
       font-size: 35px;
 
     }
+    .work{
+      font-size: 28px;
+    }
+    .textorange{
 
+      font-size: 28px;
+    }
 
 
   }
@@ -131,7 +137,13 @@
 
     }
 
+    .work{
+      font-size: 24px;
+    }
+    .textorange{
 
+      font-size: 24px;
+    }
 
   }
 
