--- a/src/index.css
+++ b/src/index.css
@@ -36,12 +36,12 @@ header{
 }
 
 .header{
-  width: 90%;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 30px;
-  
+  justify-content: space-around;;
 }
 
 
@@ -52,7 +52,9 @@ body{
 
 }
 
-
+.header img{
+  margin: 0 25px;
+}
 
 .header__nav-list{
 
@@ -89,10 +91,12 @@ body{
 
 .product{
   width: 100%;
-  height: 970px;
+  height: 100%;
   display: flex;
   background-color: #D9D9D9;
   flex-direction: column;
+  align-items: center;
+  
 
 }
 
@@ -113,7 +117,7 @@ body{
 
 .delivery{
   width: 100%;
-  height: 970px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -142,6 +146,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 70%;
 }
 
 
@@ -256,13 +261,14 @@ footer{
 .position{
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 80%;
   height: 100%;
   justify-content: space-evenly;
   align-content: space-around;
   flex-wrap: wrap;
   white-space: pre-line;  
   vertical-align: bottom;
+  margin: 25px 0;
 }
 
 .shopCart img {
@@ -305,6 +311,14 @@ footer{
 
 
 @media (max-width: 1576px){
+  .deliveryinfo{
+    margin-top: 20px;
+
+  }
+  .work{
+    margin: 20px 0;
+      
+  }
   .shopCart{
     width: 250px;
     height: 350px;
@@ -312,6 +326,9 @@ footer{
   .deliveryinfotext{
     font-size: 25px;
   }
+  .delivery {
+    height: auto;
+}
 
 
 }
